<resources>
    <string name="app_name">LoginActivityTest</string>

    <!-- Strings related to login -->
    <string name="prompt_buyer">Buyer</string>
    <string name="prompt_seller">Seller</string>
    <string name="prompt_buyer_seller">Buyer Seller</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="register">Register Here</string>
    <string name="submit">Submit</string>
    <string name="confrim_pass">Confirm Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
