<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.support.loginactivitytest.Register">


    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/selection_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/selection_registration_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/radioGroup"
                android:gravity="center">
                <RadioButton android:id="@+id/radio_buyer"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_buyer"
                    android:tag="buyer" />
                <RadioButton android:id="@+id/radio_seller"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_seller"
                    android:tag="seller" />
                <RadioButton android:id="@+id/radio_buyerSeller"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_buyer_seller"
                    android:tag="buyerseller" />

            </RadioGroup>

            <Button
                android:id="@+id/nextBtnId"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Next" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>

